# docs/swagger.yaml
@@ -102,10 +102,25 @@ definitions:
       tahun_aktif:
         type: integer
     type: object
+  web.SyncPenetapanOpdRequest:
+    properties:
+      jenis_penetapan:
+        enum:
+        - TUJUAN-OPD
+        - SASARAN-OPD
+        example: TUJUAN-OPD
+        type: string
+      kode_opd:
+        example: 1.22.33
+        type: string
+      tahun:
+        example: 2025
+        type: integer
+    type: object
   web.SyncPenetapanOpdResponse:
     properties:
       jenis_penetapan:
-        example: tujuan
+        example: TUJUAN-OPD
         type: string
       kode_opd:
         example: 1.22.33
@@ -187,6 +202,15 @@ definitions:
         example: 1
         type: integer
     type: object
+  web.UnprocessableEntityResponse:
+    properties:
+      error:
+        additionalProperties:
+          type: string
+        example:
+          kode_opd: format kode tidak valid
+        type: object
+    type: object
   web.ValidationErrorResponse:
     properties:
       error:
@@ -266,21 +290,12 @@ paths:
       description: Sinkron data penetapan OPD berdasarkan kode OPD, tahun dan jenis
         penetapan dari perencanaan
       parameters:
-      - description: Kode OPD
-        in: query
-        name: kode_opd
+      - description: Payload sinkronisasi penetapan OPD
+        in: body
+        name: request
         required: true
-        type: string
-      - description: Tahun Penetapan
-        in: query
-        name: tahun
-        required: true
-        type: integer
-      - description: Jenis Penetapan
-        in: query
-        name: jenis_penetapan
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/web.SyncPenetapanOpdRequest'
       produces:
       - application/json
       responses:
@@ -292,6 +307,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/web.ValidationErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/web.UnprocessableEntityResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -299,7 +318,6 @@ paths:
       summary: Sync Penetapan OPD
       tags:
       - Sync
-      - Opd
   /opd/tujuan:
     get:
       consumes:
